Se corrigio isEmpty de AbstractCell